# devc-effectiverange

./: .gitignore  Dockerfile  Dockerfile-cross  Dockerfile-devc  EffectiveRange-devc.code-workspace  Makefile  README.md  apt-ci-hardening  apt_check  apt_install  apt_satisfy  apt_update  docker-compose-devc.yaml  retry  test.sh
.github/workflows/: docker-image-cross.yml  docker-image-single.yml  release.yml  test.yml
SKU/PROTO-0001/: sku.extra
SKU/PROTO-0002/: sku
build_tools/: ERBuild.cmake  dpkgdeps  dpkgdeps.py  dpkgdeps_test.py  fixbrokenlinks.sh  requirements.txt
build_tools/dpkgdeps_src/: .gitignore  pyproject.toml
build_tools/dpkgdeps_src/dpkgdeps/: dpkgdeps.py
build_tools/dpkgdeps_src/test/: dpkgdeps_test.py
dev_tools/: link_devc  run_devc
doc/: README.md  TODO.md
scripts/: build_all  build_common  build_cross_tools  check_cross_base  collect_info  gen_cross_hash  gen_os_info  gen_vars  gen_vars.py  packages  packages_amd64  packages_arm64  packages_armhf  steps-todo
scripts/build_steps_amd64/: 06-erapt_setup  100-xpkgconfig  110-cmaketoolchain  110-xcmaketoolchain  120-build_deps  120-debootstrap  121-schroot_setup  130-ldconfig  130-python_build_deps  140-gdbsetup
scripts/build_steps_arm64/: 00-debootstrap_cross  04-schroot_setup  05-schroot_build_deps  10-build_deps  110-xcmaketoolchain  115-dpkgdeps  120-fixgcctooling  130-fixbrokenlinks  90-gccxspecs
scripts/build_steps_armhf/: 00-debootstrap_cross  04-schroot_setup  05-schroot_build_deps  06-erapt_setup  10-build_deps  100-xpkgconfig  110-xcmaketoolchain  115-dpkgdeps  117-python_build_deps  120-fixgcctooling  130-fixbrokenlinks  90-gccxspecs
scripts/build_steps_cross/: 01-downloadpkgs  02-applypatches  100-raspberrydeinit  11-raspberrysetup  12-raspberrysources  20-binutils  30-gccbootstrap  60-restglibc
scripts/build_steps_cross_armhf/: 01-downloadpkgs  02-applypatches  10-kernelheaders  11-raspberrysetup  12-raspberrysources  40-libcbootstrap  50-libgcc  70-allstdcpplibandgcc  80-kernelmodbuildsetup
scripts/devc/: start.sh
test/: 120-testcmake.sh  Dockerfile  Makefile
test/build_complex_test/: CMakeLists.txt  deps.json
test/build_complex_test/testbin/: CMakeLists.txt  deps.json  main.cpp  test.proto
test/build_complex_test/testlib/: CMakeLists.txt  deps.json
test/build_complex_test/testlib/src/: lib.cpp
test/build_exe_test/: CMakeLists.txt  deps.json
test/build_shared_lib_test/: CMakeLists.txt  deps.json
test/build_shared_lib_test/include/test_lib/: test.hpp
test/build_shared_lib_test/include/test_shared_lib/: test.hpp
test/build_shared_lib_test/include_priv/: test_priv.hpp
test/build_shared_lib_test/src/: test.cpp
test/build_shared_lib_test/test/: main.cpp
test/build_static_lib_test/: CMakeLists.txt
test/build_static_lib_test/include/test_lib/: test.hpp
test/build_static_lib_test/include_priv/: test_priv.hpp
test/build_static_lib_test/src/: test.cpp
